--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -21,7 +21,8 @@
               - else
                 = render "collection_empty"
 
--#     = render 'shared/add_button'
+
+= render 'shared/add_button'
 
 -# https://invenio.dev.br/conteudos/como-implementar-mensagens-flash-animadas-no-rails-com-turbo
 
