--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -2,13 +2,9 @@
 
 
 body {
-    background-color:#eee;
+    background-color: #e2e8f0;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
-}
-
-.card {
-    border: none;
 }
 
 .card-div {
@@ -57,6 +53,25 @@ body {
     background: blue;
 }
 
+.text-blue {
+    color: #36a8f5;
+}
+
+.primary-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+}
+
+.primary-button:hover {
+    background-color: #0056b3;
+    color: white;
+}
+
+.custom-buttom {
+    width: 110px;
+}
+
 .box {
     border: 1px solid #eee;
     padding: 15px;
@@ -100,4 +115,56 @@ body {
 .custom-card-header {
     background-color: #5b5c5c;
     color: white;
+}
+
+
+
+/* show */
+
+.main-body {
+    padding: 15px;
+}
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
 }
