Add action scan

--- a/app/views/users/_collection_empty.html.haml
+++ b/app/views/users/_collection_empty.html.haml
@@ -1,4 +1,4 @@
 - if @searched
-  %h4.font-weight-bold.text-centertext-muted No results found
+  %h4.font-weight-bold.text-center.text-muted No results found
 - else
   %h4.font-weight-bold.text-center.text-muted Use the search bar to find users
