--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -32,13 +32,12 @@ body {
     border: 2px solid #eee;
 }
 
-
 .search input:focus {
     box-shadow: none;
     border: 2px solid blue;
 }
 
-.search .fa-search {
+.search .fa-brands {
     position: absolute;
     top: 20px;
     left: 16px;
@@ -117,13 +116,10 @@ body {
     color: white;
 }
 
-
-
-/* show */
-
 .main-body {
     padding: 15px;
 }
+
 .card {
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
 }
@@ -155,6 +151,7 @@ body {
     padding-right: 8px;
     padding-left: 8px;
 }
+
 .mb-3, .my-3 {
     margin-bottom: 1rem!important;
 }
@@ -162,9 +159,16 @@ body {
 .bg-gray-300 {
     background-color: #e2e8f0;
 }
+
 .h-100 {
     height: 100%!important;
 }
+
 .shadow-none {
     box-shadow: none!important;
+}
+
+.error {
+    color: red;
+    font-size: 12px;
 }
