--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -18,4 +18,6 @@
             .form-group
               .col-sm-offset-2.col-sm-12
                 %div.float-end
-                  = form.submit 'Submit', class: 'btn btn-primary'
+                  = form.submit 'Submit', class: 'btn btn-primary custom-buttom'
+                  = link_to users_path, class: "btn btn-secondary mx-2 custom-buttom" do
+                    Back
