--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -5,8 +5,8 @@
     .col-md-12
       .card
         .card-div.d-flex.flex-column
-          %span.d-block.center.custom-margin-bottom
-            %i.fa-brands.fa-github.fa-3x
+          -# %span.d-block.center.custom-margin-bottom
+          -#   %i.fa-brands.fa-github.fa-3x
           %h3.font-weight-bold Find Profiles of Github Users
         = render partial: "filter", locals: { url: users_path }
 
