--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -58,7 +58,8 @@
               .col-sm-12.d-flex.justify-content-end
                 = link_to edit_user_path, class: "btn btn-primary mx-2 custom-buttom" do
                   Edit
-                = link_to users_path, class: "btn primary-button mx-2 custom-buttom" do
-                  Rescan
+                = button_to "Rescan", rescan_user_path(@user), method: :post, class: "btn primary-button mx-2 custom-buttom"
                 = link_to users_path, class: "btn btn-secondary mx-2 custom-buttom" do
                   Back
+
+= render 'shared/add_button'
