--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -5,7 +5,7 @@
         .card-header.custom-card-header
           %h4= @user.new_record? ? 'New User' : 'Edit User'
         .card-body
-          = simple_form_for @user, html: { class: 'form-horizontal' } do |form|
+          = simple_form_for @user, html: { class: 'form-horizontal' }, data: { turbo: false } do |form|
             .form-group
               .col-sm-12
                 = form.input :name, required: true, input_html: { class: 'form-control' }
@@ -18,6 +18,6 @@
             .form-group
               .col-sm-offset-2.col-sm-12
                 %div.float-end
-                  = form.submit 'Submit', class: 'btn btn-primary custom-buttom'
+                  = form.submit 'Submit', class: 'btn btn-primary mx-2 custom-buttom'
                   = link_to users_path, class: "btn btn-secondary mx-2 custom-buttom" do
                     Back
