--- a/app/views/users/_collection.html.haml
+++ b/app/views/users/_collection.html.haml
@@ -6,5 +6,5 @@
           = ResultDecorator.decorate(item).profile_image
         %td
           = ResultDecorator.decorate(item).formatted_info
-        %td
+        %td.align-middle.float-right{style: "width: 170px;"}
           = render 'buttons_actions', user: item
