--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -12,7 +12,9 @@
             %br
             .form-group
               .col-sm-12
-                = form.input :github_url, required: true, input_html: { class: 'form-control' }
+                -# @ TODO trazer o original_github_url no form de edit
+                - debugger
+                = form.input :github_url, required: true, input_html: { class: 'form-control', value: @user.new_record? ? nil : @user.original_github_url }
 
             %br
             .form-group
